using overflow:auto to prevent nasty scrollbars

--- a/public/stylesheets/calendar-day.css
+++ b/public/stylesheets/calendar-day.css
@@ -28,7 +28,7 @@
     .collision_box {
       position: absolute;
       width: 38%;
-      overflow: scroll;
+      overflow: auto;
       background-color: #CFC; /* added by Jack for testing - please remove when you have something better! */
     }
     .collision_box .event {
@@ -58,5 +58,3 @@
     margin: 0 0 0 51px; 
     padding: 0; 
   }
-  
-  
